Никакого МЧД здесь нет, вы о чём?

--- a/modules/.BackOffice-ObjectModel-Powers/pages/PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc
+++ b/modules/.BackOffice-ObjectModel-Powers/pages/PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc
@@ -18,7 +18,7 @@ public sealed class PowerOfAttorneySubsidiaryPowersOfAttorney : BaseCardSectionR
 |===
 |Имя |Описание
 
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` |Системная карточка дочерней доверенности.
+|`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` |Системная карточка дочерней доверенности.
 |===
 
 == Поля
