--- a/modules/.BackOffice-ObjectModel-Powers/pages/PowerOfAttorney_CL.adoc
+++ b/modules/.BackOffice-ObjectModel-Powers/pages/PowerOfAttorney_CL.adoc
@@ -18,9 +18,9 @@ public sealed class PowerOfAttorney: BaseCard
 |===
 |Имя |Описание
 
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[MainInfo]` |Основная информация.
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[SubsidiaryPowersOfAttorney]` |Системные карточки дочерних доверенностей.
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[RepresentativesPowers]` |Полномочия представителей.
+|`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[MainInfo]` |Основная информация.
+|`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[SubsidiaryPowersOfAttorney]` |Системные карточки дочерних доверенностей.
+|`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[RepresentativesPowers]` |Полномочия представителей.
 |===
 
 == Поля
