--- a/modules/.BackOffice-ObjectModel-Powers/pages/Powers_CL.adoc
+++ b/modules/.BackOffice-ObjectModel-Powers/pages/Powers_CL.adoc
@@ -18,8 +18,8 @@ public class Powers : BaseDictionaryCard
 |===
 |Имя |Описание
 
-|`xref:BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[Groups]` |Группы.
-|`xref:BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowerOfAttorneyFormats]` |Форматы доверенности.
+|`xref:.BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[Groups]` |Группы.
+|`xref:.BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowerOfAttorneyFormats]` |Форматы доверенности.
 |===
 
 == Поля
