--- a/modules/Platform-ObjectModel/pages/ObjectModel_NS.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectModel_NS.adoc
@@ -29,24 +29,24 @@
 |`xref:ObjectPropertyValueCollection_CL.adoc[ObjectPropertyValueCollection]` |Используется некоторыми преобразователями данных для хранения значений.
 |`xref:ObjectRef_CL.adoc[ObjectRef<T>]` |Содержит ссылку на объект в _контексте объектов_.
 |`xref:ObjectState_CL.adoc[ObjectState]` |Позволяет получать флаги состояния объекта.
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]`
-|Системная карточка доверенности.
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[PowerOfAttorneyMainInfo]`
-|Представляет секцию "Основная информация" системной карточки доверенности.
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[PowerOfAttorneyRepresentative]`
-|Представляет секцию "Представитель" системной карточки доверенности.
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[PowerOfAttorneyRepresentativesPowers]`
-|Представляет секцию "Полномочия" системной карточки доверенности.
-|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]`
-|Представляет cекции "Системные карточки" дочерних доверенностей.
-|`xref:BackOffice-ObjectModel-Powers:Powers_CL.adoc[Powers]`
-|Представляет полномочия для справочника полномочий МЧД.
-|`xref:BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[PowersCode]`
-|Представляет коды полномочий для справочника полномочий МЧД.
-|`xref:BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[PowersGroup]`
-|Представляет группы полномочий для справочника полномочий МЧД.
-|`xref:BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowersPowerOfAttorneyFormat]`
-|Представляет типы доверенности карточки справочник полномочий МЧД.
+// |`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]`
+// |Системная карточка доверенности.
+// |`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[PowerOfAttorneyMainInfo]`
+// |Представляет секцию "Основная информация" системной карточки доверенности.
+// |`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[PowerOfAttorneyRepresentative]`
+// |Представляет секцию "Представитель" системной карточки доверенности.
+// |`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[PowerOfAttorneyRepresentativesPowers]`
+// |Представляет секцию "Полномочия" системной карточки доверенности.
+// |`xref:.BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]`
+// |Представляет cекции "Системные карточки" дочерних доверенностей.
+// |`xref:.BackOffice-ObjectModel-Powers:Powers_CL.adoc[Powers]`
+// |Представляет полномочия для справочника полномочий МЧД.
+// |`xref:.BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[PowersCode]`
+// |Представляет коды полномочий для справочника полномочий МЧД.
+// |`xref:.BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[PowersGroup]`
+// |Представляет группы полномочий для справочника полномочий МЧД.
+// |`xref:.BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowersPowerOfAttorneyFormat]`
+// |Представляет типы доверенности карточки справочник полномочий МЧД.
 |`xref:ServiceFactory_CL.adoc[ServiceFactory]` |Управляет получением сервиса из фабрики сервисов.
 |`xref:StaticObjectContext_CL.adoc[StaticObjectContext]` |Управляет получением сервиса из фабрики сервисов.
 |===
