--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -4,33 +4,33 @@
 
 == Изменения в API
 
-.API для работы с МЧД
-[%collapsible]
-====
-* Добавлен пример работы с xref:cards:attorney.adoc[системной карточкой доверенности].
-+
-[lowerroman]
-.. Классы:
-+
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` -- системная карточка доверенности.
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[PowerOfAttorneyMainInfo]` -- представляет секцию "Основная информация" системной карточки доверенности.
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[PowerOfAttorneyRepresentative]` -- представляет секцию "Представитель" системной карточки доверенности.
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[PowerOfAttorneyRepresentativesPowers]` -- представляет секцию "Полномочия" системной карточки доверенности.
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]` -- представляет cекции "Системные карточки" дочерних доверенностей.
-** `xref:BackOffice-ObjectModel-Powers:Powers_CL.adoc[Powers]`  -- представляет полномочия для справочника полномочий МЧД.
-** `xref:BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[PowersCode]` -- представляет коды полномочий для справочника полномочий МЧД.
-** `xref:BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[PowersGroup]` -- представляет группы полномочий для справочника полномочий МЧД.
-** `xref:BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowersPowerOfAttorneyFormat]` -- представляет типы доверенности карточки справочник полномочий МЧД.
-** `xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyMachineReadableProvider_IN.adoc[IPowerOfAttorneyMachineReadableProvider]` -- определяет методы формирования и чтения машиночитаемой доверенности.
-** `xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPowerOfAttorneyServicec]` -- предоставляет методы для работы с системной карточкой доверенности.
-+
-.. Перечисления::
-+
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[PowerOfAttorneyRegTransferStatuses]` -- статус передачи доверенности в распределённый реестр ФНС.
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRetrustType_EN.adoc[PowerOfAttorneyRetrustType]` -- признак возможности оформления передоверия.
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySignatureFormat_EN.adoc[PowerOfAttorneySignatureFormat]` -- формат подписи.
-** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[PowerOfAttorneyStatus]` -- статус доверенности.
-====
+// .API для работы с МЧД
+// [%collapsible]
+// ====
+// * Добавлен пример работы с xref:cards:.attorney.adoc[системной карточкой доверенности].
+// +
+// [lowerroman]
+// .. Классы:
+// +
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[PowerOfAttorney]` -- системная карточка доверенности.
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[PowerOfAttorneyMainInfo]` -- представляет секцию "Основная информация" системной карточки доверенности.
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[PowerOfAttorneyRepresentative]` -- представляет секцию "Представитель" системной карточки доверенности.
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[PowerOfAttorneyRepresentativesPowers]` -- представляет секцию "Полномочия" системной карточки доверенности.
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySubsidiaryPowersOfAttorney_CL.adoc[PowerOfAttorneySubsidiaryPowersOfAttorney]` -- представляет cекции "Системные карточки" дочерних доверенностей.
+// ** `xref:BackOffice-ObjectModel-Powers:Powers_CL.adoc[Powers]`  -- представляет полномочия для справочника полномочий МЧД.
+// ** `xref:BackOffice-ObjectModel-Powers:PowersCode_CL.adoc[PowersCode]` -- представляет коды полномочий для справочника полномочий МЧД.
+// ** `xref:BackOffice-ObjectModel-Powers:PowersGroup_CL.adoc[PowersGroup]` -- представляет группы полномочий для справочника полномочий МЧД.
+// ** `xref:BackOffice-ObjectModel-Powers:PowersPowerOfAttorneyFormat_CL.adoc[PowersPowerOfAttorneyFormat]` -- представляет типы доверенности карточки справочник полномочий МЧД.
+// ** `xref:BackOffice-ObjectModel-Services-IPartnersService:.IPowerOfAttorneyMachineReadableProvider_IN.adoc[IPowerOfAttorneyMachineReadableProvider]` -- определяет методы формирования и чтения машиночитаемой доверенности.
+// ** `xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService_IN.adoc[IPowerOfAttorneyServicec]` -- предоставляет методы для работы с системной карточкой доверенности.
+// +
+// .. Перечисления::
+// +
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[PowerOfAttorneyRegTransferStatuses]` -- статус передачи доверенности в распределённый реестр ФНС.
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRetrustType_EN.adoc[PowerOfAttorneyRetrustType]` -- признак возможности оформления передоверия.
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySignatureFormat_EN.adoc[PowerOfAttorneySignatureFormat]` -- формат подписи.
+// ** `xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[PowerOfAttorneyStatus]` -- статус доверенности.
+// ====
 
 Добавлен метод::
 Добавлено описание метода `xref:Platform-ObjectModel:ObjectContext.RefreshObject_MT.adoc[RefreshObject(IObjectRef)]` для обновления корневого объекта.
