Немного Windows-специфики убрал, но это, конечно, нельзя сказать "скрыл всё"

--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CreateDocument_1_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.CreateDocument_1_MT.adoc
@@ -39,7 +39,7 @@ IDocumentService documentService = objectContext.GetService<IDocumentService>();
 
 KindsCardKind kind = objectContext.GetObject<KindsCardKind>(new Guid("0538E317-FAB6-4BB7-85C5-2303375A4EE1")); <.>
 
-Document document = documentService.CreateDocument(@"C:\Sample.docx", kind); <.>
+Document document = documentService.CreateDocument(@"..\Sample.docx", kind); <.>
 
 document.Description = "Пример документа"; <.>
 
