--- a/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IVersionedFileCardService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IVersionedFileCardService/pages/IVersionedFileCardService_IN.adoc
@@ -63,7 +63,7 @@ public interface IVersionedFileCardService
 ----
 IVersionedFileCardService iVersionedFileCardService = objectContext.GetService<IVersionedFileCardService>(); <.>
 
-VersionedFileCard versionedFileCard = iVersionedFileCardService.CreateCard(@"C:\test.txt"); <.>
+VersionedFileCard versionedFileCard = iVersionedFileCardService.CreateCard(@"..\test.txt"); <.>
 
 iVersionedFileCardService.CheckOut(versionedFileCard); <.>
 
