--- a/modules/cards/pages/export-import-print.adoc
+++ b/modules/cards/pages/export-import-print.adoc
@@ -10,7 +10,7 @@
 
 [source,csharp]
 ----
-FileStream file = new FileStream("C:\\MyCard.xml", FileMode.Create);
+FileStream file = new FileStream("..\\MyCard.xml", FileMode.Create);
 card.SaveXml(file, ExportFlags.LinkedCards & ExportFlags.LinkedRows);
 ----
 
