--- a/modules/cards/pages/general-information.adoc
+++ b/modules/cards/pages/general-information.adoc
@@ -4,7 +4,7 @@
 * Базовый API -- универсальное средство программного доступа ко всем функциям платформы {dv}. Может быть использован в проектах, основанных на .NET (сборка `DocsVision.Platform.ObjectManager.dll`) и COM (сборка `ObjectManager.dll`) технологиях.
 * Высокоуровневый слой, объектная модель {dv} (далее -- "объектная модель") -- набор базовых объектов и функциональных возможностей, с помощью которых могут быть реализованы специализированные модели сущностей выбранной предметной области.
 +
-Использование готовых базовых типов позволяет снизить издержки на разработку собственного решения, обеспечит прозрачность архитектуры, простоту расширения и интеграции нескольких решений, включая _{bo}_ (являются частью платформы Docsvision). API данного уровня является удобным средством для работы с карточками. Сборки данного уровня API имеют только .NET-версию.
+Использование готовых базовых типов позволяет снизить издержки на разработку собственного решения, обеспечит прозрачность архитектуры, простоту расширения и интеграции нескольких решений, включая _{bo}_ (являются частью платформы {dv}). API данного уровня является удобным средством для работы с карточками. Сборки данного уровня API имеют только .NET-версию.
 
 В зависимости от применимости функциональных возможностей выбранного уровня API, можно выделить четыре группы задач разработчика:
 
