--- a/modules/scripts/pages/debug-scripts.adoc
+++ b/modules/scripts/pages/debug-scripts.adoc
@@ -7,6 +7,8 @@
 .В качестве целевой платформы укажите:
 * .NET Framework 4.0 -- если используется система {dv} версии 5.4,
 * .NET Framework 4.6.1 (не "Client profile") -- если используется система {dv} версии 5.5.
+* {net-r} и выше -- если используется система {dv} версии 6.1.
+
 . Подключите к проекту сборки из папки установки {wincl}а:
 +
 * `DocsVision.Platform.ObjectManager.dll`.
