--- a/modules/solutions/pages/distribution-client.adoc
+++ b/modules/solutions/pages/distribution-client.adoc
@@ -13,11 +13,11 @@
 * Базовый путь для установки файлов.
 
 [#paths]
-Путь для установки файлов обычно зависит от выбранной области установки. При установке "Только для текущего пользователя" это обычно путь: `$\КАТАЛОГ_ПРОФИЛЯ_ПОЛЬЗОВАТЕЛЯ\Local Settings\DocsVision\РЕШЕНИЕ\ВЕРСИЯ\Client\`, а при установке в область "Для всех пользователей" -- путь: `$\Program Files\DocsVision\РЕШЕНИЕ}\Client\`.
+Путь для установки файлов обычно зависит от выбранной области установки. При установке "Только для текущего пользователя" это обычно путь: `$\КАТАЛОГ_ПРОФИЛЯ_ПОЛЬЗОВАТЕЛЯ\Local Settings\DocsVision\РЕШЕНИЕ\ВЕРСИЯ\Client\`, а при установке в область "Для всех пользователей" -- путь: `$\Program Files\DocsVision\РЕШЕНИЕ\Client\`.
 
 [WARNING]
 ====
-Особенность работы Windows Installer такова, что даже при установке в режиме "только для текущего пользователя", ключи реестра для библиотек типов (_TypeLib_) будут создаваться в общей ветке реестра ({hklm}).
+Особенность работы Windows Installer такова, что даже при установке в режиме "только для текущего пользователя", ключи реестра для библиотек типов (_TypeLib_) будут создаваться в общей ветке реестра (`{hklm}`).
 
 В случае отсутствия у пользователя административных привилегий на компьютере, это может привести к ошибкам в процессе установки и некорректному функционированию решения. Для избежания подобных ошибок желательно отказаться от регистрации библиотек типов (если они не нужны) -- для этого нужно проследить, чтобы в таблице _TypeLib_ инсталляционного пакета не было никаких записей.
 ====
