--- a/modules/solutions/pages/distribution-server.adoc
+++ b/modules/solutions/pages/distribution-server.adoc
@@ -19,6 +19,8 @@
 
 Пакет достаточно просто скопировать в заданную папку, которая обычно расположена по пути: `C:\ProgramFiles\DocsVision\Platform\ВЕРСИЯ_ПЛАТФОРМЫ\Server\Site\Setup\ИМЯ_РЕШЕНИЯ`. Тогда этот инсталляционный пакет будет доступен с клиентских машин по URL: `\http://ИМЯ_СЕРВЕРА/ВИРТУАЛЬНАЯ_ПАПКА/Setup/ИМЯ_РЕШЕНИЯ/НАЗВАНИЕ_ПАКЕТА`. Например: `\http://localhost/DocsVision/Setup/TakeOfficeClient/TakeOfficeClient.msi`
 
-Возможны также какие-то дополнительные действия, которые должны быть выполнены в процессе установки серверной части решения -- это может быть регистрация и запуск каких-то специализированных сервисов, установка прикладных бизнес-процессов, создание виртуальных папок в IIS и т.п. В этом случае необходимые файлы этих дополнительных компонент решения рекомендуется размещать по пути: `C:\ProgramFiles\DocsVision\ИМЯ_РЕШЕНИЯ\ВЕРСИЯ\Server\`.
+Возможны также какие-то дополнительные действия, которые должны быть выполнены в процессе установки серверной части решения -- это может быть регистрация и запуск каких-то специализированных сервисов, установка прикладных бизнес-процессов.
+// , создание виртуальных папок в IIS и т.п.
+В этом случае необходимые файлы этих дополнительных компонент решения рекомендуется размещать по пути: `C:\ProgramFiles\DocsVision\ИМЯ_РЕШЕНИЯ\ВЕРСИЯ\Server\`.
 
 А необходимые для работы решения дополнительные настройки рекомендуется сохранять в реестре по пути: `{hklm}\DocsVision\ИМЯ_РЕШЕНИЯ\ВЕРСИЯ\`.
