--- a/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
+++ b/modules/solutions/pages/cards/card-component/standard-interfaces.adoc
@@ -18,7 +18,7 @@ image::ROOT:control-location.png[Создание проекта "Windows Forms 
 ****
 Эти сборки входят в состав как серверной, так и клиентской программ инсталляции. В случае установки только клиентской программы, их можно взять из папки пользователя, для которого проведена установка: `C:\Users\USERNAME\AppData\Local\DocsVision\Client`.
 
-При выполнении установки сервера сборки можно взять из папки: `C:\Program Files\DocsVision\Platform\5.0`
+При выполнении установки сервера сборки можно взять из папки: `\DocsVision\Platform\`
 ****
 
 Следует подключить пространства имён этих сборок в область видимости текущего проекта при помощи директивы `using`:
