--- a/modules/solutions/pages/extensions/console-plugin.adoc
+++ b/modules/solutions/pages/extensions/console-plugin.adoc
@@ -4,8 +4,8 @@
 
 .Такими действиями, в частности, могут являться:
 * Работа с базой данных.
-* Установка или конфигурирование NT-сервисов.
-* Создание Web-сайтов или виртуальных папок в IIS.
+// * Установка или конфигурирование NT-сервисов.
+// * Создание Web-сайтов или виртуальных папок в IIS.
 * Взаимодействие с другими компонентами или решениями.
 * Изменение параметров работы решения после окончания установки.
 * Прочие действия.
