ERR-4456 -- переписал обновление, создание и подключение БД

--- a/modules/solutions/pages/distribution-server.adoc
+++ b/modules/solutions/pages/distribution-server.adoc
@@ -1,3 +1,5 @@
+// TODO:: IIS, виндовые пути, реестр и прочее
+
 = Инсталляция серверной части решения
 
 Если решение включает в себя какие-либо карточки (новые или модификацию имеющихся), то первоочередным шагом при его распространении является загрузка описаний этих карточек в базу данных на выбранном рабочем сервере.
