--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageService_CL.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageService_CL.adoc
@@ -92,7 +92,7 @@ public class ApprovalStageService : ContextService, IApprovalStageService
 
 |`StartStage(ApprovalStage, Reconcile)`
 
-|Первый этап согласования.
+|Начало работы этапа согласования.
 
 |`OnStageStarted(ApprovalStage, ApprovalPath, Reconcile)`
 
@@ -100,6 +100,7 @@ public class ApprovalStageService : ContextService, IApprovalStageService
 
 |`CreateNextTask(ApprovalStage, Reconcile)`
 
+|Создание задания согласования.
 
 |`OnTaskCreated(ApprovalStage, ApprovalPath, Reconcile, Task)`
 
