ERR-4832 / SUP-8068 -- потерянное описание метода

--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageService_CL.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageService_CL.adoc
@@ -82,6 +82,9 @@ public class ApprovalStageService : ContextService, IApprovalStageService
 
 |Копирует согласующих из документа в этап.
 
+|`ComputeApproversForStage(ApprovalStage, Reconcile, ApprovalPath)`
+|Вычисляет согласующих при запуске этапа.
+
 |`GetStageApprovers(ApprovalStage, Document)`
 
 |Получает согласующих этапа.
