TSK-4404 / GBL-3048 -- задачи на улучшение документации, раздел "новое в версии".

--- a/modules/ROOT/partials/bo-om-partners.adoc
+++ b/modules/ROOT/partials/bo-om-partners.adoc
@@ -16,4 +16,4 @@
 ***** xref:BackOffice-ObjectModel-Partners:PartnersOrgType_CL.adoc[]
 ***** xref:BackOffice-ObjectModel-Partners:PartnersPosition_CL.adoc[]
 ***** xref:BackOffice-ObjectModel-Partners:PartnersPropertyShowType_EN.adoc[]
-// ***** xref:.BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[]
+***** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[]
