--- a/modules/ROOT/partials/bo-om-services-partners.adoc
+++ b/modules/ROOT/partials/bo-om-services-partners.adoc
@@ -4,5 +4,5 @@
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.DeleteEmployee_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindCompanyByNameOnServer_MT.adoc[]
 ******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPartnersService.FindUnitGroups_MT.adoc[]
-// ******* xref:BackOffice-ObjectModel-Services-IPartnersService:.IPowerOfAttorneyMachineReadableProvider_IN.adoc[]
-// ******* xref:BackOffice-ObjectModel-Services-IPartnersService:.IPowerOfAttorneyService_IN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyMachineReadableProvider_IN.adoc[]
+******* xref:BackOffice-ObjectModel-Services-IPartnersService:IPowerOfAttorneyService_IN.adoc[]
