--- a/modules/ROOT/partials/cards.adoc
+++ b/modules/ROOT/partials/cards.adoc
@@ -12,7 +12,7 @@
 *** xref:cards:search.adoc[]
 *** xref:cards:export-import-print.adoc[]
 *** xref:cards:signing-encryption.adoc[]
-// *** xref:cards:.attorney.adoc[]
+*** xref:cards:attorney.adoc[]
 *** xref:cards:bo-lib/library.adoc[]
 **** xref:cards:bo-lib/business-calendar.adoc[]
 **** xref:cards:bo-lib/document.adoc[]
