ERR-5026 -- GAC неактуален в 6.1 под Линукс

--- a/modules/samples/pages/components/command-plugin.adoc
+++ b/modules/samples/pages/components/command-plugin.adoc
@@ -8,7 +8,7 @@
 . Измените базовый класс элемента управления с UserControl на `xref:Platform-WinForms:NavExtension_CL.adoc[NavExtension]`.
 . Переопределить необходимые методы и свойства базового класса (см. пример).
 . Создать библиотеку карточек (доступна в xref:ROOT:attachment$winclientExtension.zip[архиве] проекта), включив в неё карточку, использующую созданный компонент.
-. Зарегистрировать реализованный компонент в GAC (предпочтительно) на всех клиентских машинах.
+. Зарегистрировать реализованный компонент в одной из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}Shared\Paths` (предпочтительно) на всех клиентских машинах.
 . Зарегистрировать с использованием программы CardManager, входящей в {rk}, созданную библиотеку карточек на сервере {dv}.
 
 [source,csharp]
