--- a/modules/samples/pages/components/employee-control.adoc
+++ b/modules/samples/pages/components/employee-control.adoc
@@ -351,8 +351,8 @@ public StaffEmployeeStatus? SelectedEmployeeStatus
 +
 . Добавьте новый строковый параметр с любым названием. В значении добавленного параметра должен быть указан путь к сборке компонента или строгое имя сборки:
 +
-* Полный путь к сборке -- если сборка не зарегистрирована в GAC. Например: `C:\Users\KurkinSA\AppData\Local\Docsvision\Client\Docsvision.TreeControl.dll`.
-* Строгое имя сборки -- если сборка зарегистрирована в GAC. Например: `Docsvision.TreeControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=7148afe997f90519`.
+* Полный путь к сборке -- если сборка не зарегистрированаfootnote:[Для регистрации сборку необходимо поместить в одну из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}\Shared\Paths`.]. Например: `C:\Users\KurkinSA\AppData\Local\Docsvision\Client\Docsvision.TreeControl.dll`.
+* Строгое имя сборки -- если сборка зарегистрированаfootnote:[Для регистрации сборку необходимо поместить в одну из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}\Shared\Paths`.]. Например: `Docsvision.TreeControl, Version=1.0.0.0, Culture=neutral, PublicKeyToken=7148afe997f90519`.
 
 Когда компонент зарегистрирован, после повторного входа в {dv} {wincl} на панель инструментов будет представлен разработанный элемент управления:
 
