--- a/modules/samples/pages/components/properties-page.adoc
+++ b/modules/samples/pages/components/properties-page.adoc
@@ -136,7 +136,7 @@ protected override IEnumerable<NavPropertyPage> CreatePropertyPages()
 ====
 +
 . Собираем проект и распространяем сборку на клиентские компьютеры. Сборка должна быть зарегистрирована как COM-компонент утилитой _regasm_.
-. Реализуем библиотеку карточек с карточкой, компонентом который является сборка, содержащая разработанный ранее код (сборка может быть подписанной и размещена в GAC, либо в каталоге приложения).
+. Реализуем библиотеку карточек с карточкой, компонентом который является сборка, содержащая разработанный ранее код (сборка может быть подписанной и размещена в одной из папок на сервере с установленной программой {cns} (см. раздел "xref:install-linux::linux-limitations.adoc[]"), перечисленных в ветке реестра `{hklm-dv}\Shared\Paths`, либо в каталоге приложения).
 +
 .Добавление кода сборки
 image::ROOT:assembly-code.png[Добавление кода сборки]
